--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-/home/zoechi/source/my/templates/git/gitignore.dart
+########################################
+# Git ignore file for Dart executables #
+########################################
+
+# Global
+###################
+*.exe
+*.*~
+
+# Dart global
+###################
+.buildlog
+*.dart.js
+*.dart.js.deps
+*.dart.js.map
+#pubspec.lock
+.buildlog
+
+# Dart project
+###################
+packages/
+packages
+lib/docs/
+out/
+deploy/
+.settings/
+_from_packages
