Fixes #5 Closes #5 Fixes #3 Closes #3 Fixes #1 Closes #1
Clean up code
Support custom events
Make options settable using HTML attributes
Differentiate methods in private and public

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,16 @@
 name: freebase_searchwidget
-version: 0.0.1
-author: Günter Zöchbauer
+version: 0.1.2
+author: Günter Zöchbauer <guenter@gzoechbauer.com>
+homepage: https://github.com/zoechi/dart-freebase-search-widget
 description: Port of Freebase Suggest 4.2 Javascript code to Dart
+environment:
+  sdk: any
 dependencies:
   polymer: any
   animation: any
+  mdv: any
+  browser: any
+  #shadow_dom: any
 
 dev_dependencies:
   unittest: any
