ApplyAuthorStyles = true so the component works with the original CSS provided by Google. Remove mdv-dependency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies:
   polymer: any
   animation: any
-  mdv: any
+#  mdv: any
   browser: any
-
+  
 dev_dependencies:
   unittest: any
